<resources>
    <string name="app_name">DispositivosMoviles</string>
    <string name="et_correo">Correo</string>
    <string name="et_clave">Password</string>
    <string name="noLogin">Usuario y contraseña no valida</string>

    <string name="title_activity_principal">Principal</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="NombreLugar">Nombre del Lugar</string>
    <string name="CorreoLugar">Email</string>
    <string name="TelefonoLugar">Telefono (9999-9999)</string>
    <string name="WebLugar">Web</string>
    <string name="btAddLugar">Agregar Lugar</string>
    <string name="btUpdateLugar">Actualizar Lugar</string>
    <string name="btDeleteLugar">Eliminar Lugar</string>

    <string name="ms_AddLugar">Lugar Agregado</string>
    <string name="ms_FaltaNombre">Faltan Valores</string>

    <string name="todo">TODO</string>
    <string name="msg_imagen">Foto del lugar</string>
    <string name="msgEscucharAudio">Escuchar Audio</string>

    <string name="msgInicioNotaAudio">Grabando</string>
    <string name="msgDetieneNotaAudio">Detiene</string>
    <string name="msgSubiendo">Subiendo los archivos</string>
</resources>