<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context="ui.home.UpdateLugarFragment">


    <EditText
        android:id="@+id/et_nombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/NombreLugar" />

    <EditText
        android:id="@+id/et_correo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/CorreoLugar" />

    <EditText
        android:id="@+id/et_telefono"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/TelefonoLugar" />

    <EditText
        android:id="@+id/et_web"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/WebLugar" />

    <Button
        android:id="@+id/bt_update_lugar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btUpdateLugar" />

    <Button
        android:id="@+id/bt_delete_lugar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btDeleteLugar" />

    <ImageButton
        android:id="@+id/btPlay"
        android:layout_width="373dp"
        android:layout_height="80dp"
        android:layout_weight="1"
        android:contentDescription="@string/msgEscucharAudio"
        android:src="@drawable/ic_play" />

    <ImageView
        android:id="@+id/imagen"
        android:layout_width="wrap_content"
        android:layout_height="380dp"
        android:contentDescription="@string/msg_imagen"
        android:scaleType="centerInside"
        tools:ignore="ImageContrastCheck"
        tools:src="@tools:sample/backgrounds/scenic" />

</LinearLayout>