<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="ui.home.AddLugarFragment">

    <EditText
        android:id="@+id/et_nombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/NombreLugar"
        android:inputType="textPersonName"
        android:padding="20dp"
        android:textAlignment="center" />

    <EditText
        android:id="@+id/et_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/CorreoLugar"
        android:inputType="textPersonName"
        android:padding="20dp"
        android:textAlignment="center" />

    <EditText
        android:id="@+id/et_telefono"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/TelefonoLugar"
        android:inputType="textPersonName"
        android:padding="20dp"
        android:textAlignment="center" />

    <EditText
        android:id="@+id/et_web"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/WebLugar"
        android:inputType="textPersonName"
        android:padding="20dp"
        android:textAlignment="center" />

    <Button
        android:id="@+id/bt_agregarLugar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btAddLugar" />
</LinearLayout>